<resources>
    <string name="app_name">UMC product</string>
    <string name="home_now_card_main_title">내 활동 상태</string>
    <string name="home_plan_title">다가오는 일정</string>
    <string name="home_notification_title">알림 보관함</string>
    <string name="home_notice_title">공지 상세</string>
    <string name="home_plan_detail_title">일정 상세</string>
    <string name="home_plan_detail_calendar">일시</string>
    <string name="home_plan_detail_location">장소</string>
    <string name="home_plan_detail_show_map">지도 보기</string>
    <string name="home_plan_detail_plan_notice">상세 안내</string>
    <string name="home_plan_detail_check_confirm">출석 체크 하러가기</string>
    <string name="home_plan_add_title">일정 등록</string>
    <string name="home_plan_add_plan_name">일정 제목</string>
    <string name="home_plan_add_plan_name_placeholder">일정 제목을 입력하세요</string>
    <string name="home_plan_add_plan_location_placeholder">위치를 입력하세요</string>
    <string name="home_plan_add_plan_challenger_placeholder">챌린저를 선택하세요</string>
    <string name="home_plan_add_plan_tag_placeholder">태그를 선택하세요</string>
    <string name="home_plan_add_plan_tag_bottomsheet_title">태그를 추가하세요</string>
    <string name="home_plan_add_plan_tag_bottomsheet_content">중복 선택이 가능합니다</string>
    <string name="home_plan_add_plan_participant_title">초대할 챌린저를 추가하세요</string>
    <string name="home_plan_add_plan_participant_no_challenger">아직 초대한 챌린저가 없어요</string>
    <string name="home_plan_add_plan_participant_placeholder">챌린저를 선택하세요</string>
    <string name="home_plan_add_plan_detail_placeholder">상세 내용을 입력하세요</string>
    <string name="home_plan_add_plan_search_placeholder">이름, 닉네임 또는 학교 검색</string>
    <string name="home_plan_add_plan_attend">챌린저 명단</string>
    <string name="home_plan_add_plan_detail_information">상세 안내</string>
    <string name="home_plan_add_plan_category">태그</string>
    <string name="home_plan_add_location_title">"장소를 선택하세요"</string>
    <string name="csv_upload">CSV 업로드</string>
    <string name="home_plan_add_plan_register">일정 등록하기</string>
    <string name="home_plan_add_plan_update">일정 수정하기</string>
    <string name="home_plan_add_dialog_add_attendance_title">출석부 생성</string>
    <string name="home_plan_add_dialog_add_attendance_content">출석부와 함께 일정을 생성하시겠습니까?</string>
    <string name="home_plan_add_dialog_add_attendance_yes">네, 출석부도 같이 생성할게요</string>
    <string name="home_plan_add_dialog_add_attendance_no">아니요, 일정만 생성할게요</string>
    <string name="attendance_policy_dialog_title">출석 정책 설정</string>
    <string name="attendance_check_in_start">출석 시작</string>
    <string name="attendance_on_time_end">출석 종료</string>
    <string name="attendance_late_end">지각 인정</string>
    <string name="attendance_policy_confirm">등록하기</string>
    <string name="attendance_date_placeholder">날짜 선택</string>
    <string name="attendance_time_placeholder">시간 선택</string>
    <string name="planadd_attendance_check_label">출석부도 함께 생성하기</string>
    <string name="planadd_online_check_label">비대면으로 진행하고 싶어요</string>
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_modify_profile">프로필 수정</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_suggest">중앙 건의함</string>
    <string name="mypage_suggest_cotnet">익명으로 자유롭게 의견을 남길 수 있어요.</string>
    <string name="mypage_myactivity">내 활동</string>
    <string name="mypage_mypost">내가 쓴 글</string>
    <string name="mypage_mycomment">댓글 단 글</string>
    <string name="mypage_myscrap">스크랩</string>
    <string name="mypage_addactivity">챌린저 기록 추가</string>
    <string name="mypage_setting_notice">알림 설정</string>
    <string name="mypage_setting_location">위치 설정</string>
    <string name="mypage_social">소셜 연동</string>
    <string name="mypage_kakao">카카오</string>
    <string name="mypage_google">Google</string>
    <string name="mypage_opensource">오픈소스 라이선스</string>
    <string name="mypage_umc_out_channel">UMC 외부 채널</string>
    <string name="mypage_out_link">외부 링크</string>
    <string name="mypage_personal_information">개인정보처리 방침</string>
    <string name="mypage_use_manual">이용 약관</string>
    <string name="mypage_inquire_umc_kakao">UMC 카카오톡 문의</string>
    <string name="profile_connect_account">연동된 계정</string>
    <string name="profile_give_login">로그인 제공자</string>
    <string name="profile_name_nickname">닉네임/이름</string>
    <string name="profile_school">학교</string>
    <string name="profile_part">기수/파트</string>
    <string name="profile_active_summary">활동 이력</string>
    <string name="profile_github_url">Github URL</string>
    <string name="profile_linkedin_url">LinkedIn URL</string>
    <string name="profile_blog_url">Blog URL</string>
    <string name="profile_http_start_placeholder">http://-</string>
    <string name="mypost_title">내가 쓴 글</string>
    <string name="mycomment_title">댓글 단 글"</string>
    <string name="suggest_title">내 건의 내역</string>
    <string name="suggest_ask_title">새로운 의견이 있나요?</string>
    <string name="suggest_ask_content">익명으로 자유롭게 의견을 남겨주세요.</string>
    <string name="suggest_btn_content">건의하기</string>
    <string name="suggest_write_title">중앙 건의함</string>
    <string name="suggest_admin_answer">운영진 답변</string>
    <string name="suggest_write_anomy_title">익명으로 건의하기</string>
    <string name="suggest_write_anomy_content">익명 해제 시 회원님의 학교와 이름(닉네임) 정보가 건의 내용과 함께 운영진에게 전달됩니다.</string>
    <string name="suggest_write_anomy_title_placeholder">제목을 입력하세요.</string>
    <string name="suggest_write_anomy_content_placeholder">내용을 입력하세요.</string>
    <string name="community_title">커뮤니티</string>
    <string name="community_top">명예의 전당</string>
    <string name="community_recruting">모집중</string>
    <string name="community_detail_title">게시글 상세</string>
    <string name="community_detail_placeholder">댓글을 입력해주세요.</string>
    <string name="community_detail_please_first_comment">첫 댓글을 남겨주세요.</string>
    <string name="community_detail_openchat_big_title">오픈채팅방으로 이동</string>
    <string name="community_detail_openchat_small_title">참여 전 소통하기</string>
    <string name="community_write_title">글쓰기</string>
    <string name="community_write_category">카테고리</string>
    <string name="community_write_category_select">카테고리 선택</string>
    <string name="community_write_category_select_long">카테고리를 선택하세요</string>
    <string name="community_write_light_title">번개 설정하기</string>
    <string name="community_write_light_time">날짜/시간</string>
    <string name="community_write_light_time_placeholder">예: 2026.01.01 13:00</string>
    <string name="community_write_light_people">최대 인원</string>
    <string name="community_write_light_people_placeholder">예: 4</string>
    <string name="community_write_light_place">장소</string>
    <string name="community_write_light_place_placeholder">예: 강남역 3번 출구</string>
    <string name="community_write_light_openchat">오픈 채팅 링크</string>
    <string name="community_write_light_openchat_placeholder">링크를 입력해주세요</string>
    <string name="community_write_light_openchat_error">https://open.kakao.com/로 시작해야 합니다</string>
    <string name="community_search_placehold">제목, 내용 검색</string>
    <string name="community_search_recent">최근 검색어</string>
    <string name="community_search_deleteall">전체 삭제</string>
    <string name="community_top_no_result">게시글이 존재하지 않습니다</string>
    <string name="sign_up">회원가입</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="email">이메일</string>
    <string name="allday">하루 종일</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="cancel">취소</string>
    <string name="school">학교</string>
    <string name="next">다음</string>
    <string name="github">Github</string>
    <string name="linkedin">Linked in</string>
    <string name="blog">Blog</string>
    <string name="setting">설정</string>
    <string name="information">정보</string>
    <string name="logout">로그아웃</string>
    <string name="delete_user">회원탈퇴</string>
    <string name="complete">완료</string>
    <string name="register">등록</string>
    <string name="region">지역</string>
    <string name="all">전체</string>
    <string name="soft">Soft</string>
    <string name="hard">Hard</string>
    <string name="question">질문</string>
    <string name="central">중앙</string>
    <string name="part">파트</string>
    <string name="branch">지부</string>
    <string name="confirm">확인</string>
    <string name="unConfirm">미확인</string>
    <string name="edit">수정</string>
    <string name="see">보기</string>
    <string name="start_time">일시</string>
    <string name="start_location">장소</string>
    <string name="start_participant">인원</string>
    <string name="pm">PM</string>
    <string name="design">Design</string>
    <string name="web">Web</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="nodejs">Node.js</string>
    <string name="springBoot">SpringBoot</string>
    <string name="select">선택</string>
    <string name="law">법률</string>
    <string name="assist">지원</string>
    <string name="login_title">UMC 활동을 더 편하게 관리해보세요</string>
    <string name="sign_up_sub_title">동아리 활동을 위해 정보를 입력해주세요.</string>
    <string name="sign_up_name_placeholder">실명을 입력하세요</string>
    <string name="sign_up_nickname_placeholder">닉네임을 입력하세요</string>
    <string name="sign_up_email_placeholder">example@univ.ac.kr</string>
    <string name="sign_up_email_verify_sent">이메일 인증 코드가 발송되었습니다</string>
    <string name="sign_up_email_verify_complete">이메일 인증이 완료되었습니다</string>
    <string name="sign_up_email_verify_error">인증에 실패했어요. 인증을 다시 요청해주세요</string>
    <string name="sign_up_email_already_exists">이미 가입된 이메일이에요</string>
    <string name="sign_up_email_verify_throttled">잠시 후 다시 시도해주세요 (약 60초)</string>
    <string name="sign_up_verify_request">인증 요청</string>
    <string name="sign_up_verify_confirm">인증 확인</string>
    <string name="sign_up_error_email">유효하지 않은 계정입니다</string>
    <string name="sign_up_verify_code_placeholder">인증번호 6자리 입력</string>
    <string name="sign_up_select_school_placeholder">학교를 선택하세요</string>
    <string name="sign_up_select_school_hint">가나다순으로 정렬되어 있어요</string>
    <string name="sign_up_complete">가입 완료</string>
    <string name="permission_title">권한 요청</string>
    <string name="permission_subtitle">원활한 앱 사용을 위해 권한을 허용해주세요.</string>
    <string name="permission_notification">알림 (필수)</string>
    <string name="permission_location">위치 (선택)</string>
    <string name="permission_photo">사진 (선택)</string>
    <string name="permission_notification_content">공지사항 및 일정 알림을 받습니다.</string>
    <string name="permission_location_content">출석 체크를 위해 위치 정보를 사용합니다.</string>
    <string name="permission_photo_content">게시글 작성을 위해 사진을 접근합니다.</string>
    <string name="permission_accept_all">모두 허용합니다.</string>
    <string name="sign_up_fail_title">UMC 챌린저 인증 실패</string>
    <string name="sign_up_fail_content">죄송합니다. 입력하신 정보로 등록된\nUMC 챌린저 정보를 찾을 수 없습니다.</string>
    <string name="sign_up_fail_homepage">UMC 공식 홈페이지 방문</string>
    <string name="sign_up_fail_prev_user">UMC 챌린저 인증하기</string>
    <string name="sign_up_fail_prev_user_hint">인증코드를 입력하여 서비스를 이용하실 수 있어요</string>
    <string name="sign_up_fail_qa_email">카카오톡으로 문의하기</string>
    <string name="activity_management_title">활동 관리</string>
    <string name="admin_label">Admin</string>
    <string name="tab_attendance_user">출석 체크</string>
    <string name="tab_study_user">스터디/활동</string>
    <string name="tab_challenge_user">챌린저</string>
    <string name="tab_attendance_admin">출석 관리</string>
    <string name="tab_study_admin">스터디 관리</string>
    <string name="tab_challenge_admin">챌린저 관리</string>
    <string name="attendance_header_available">출석 가능한 세션</string>
    <string name="attendance_header_history">나의 출석 현황</string>
    <string name="attendance_count_remaining_format">%d개 남음</string>
    <string name="attendance_request_button">현 위치로 출석 요청</string>
    <string name="notice_search_placeholder">제목, 내용 검색</string>
    <string name="notice_bottomSheet_title">파트를 선택하세요</string>
</resources>