<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:background="@drawable/bg_bottom_sheet">

        <include
            android:id="@+id/layout_top"
            layout="@layout/include_bottom_sheet_top_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/layout_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingBottom="16dp"
                android:text="@string/notice_bottomSheet_title"
                android:textAppearance="@style/Title3Bold"
                android:textColor="@color/neutral800" />

            <TextView
                android:id="@+id/text_pm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="16dp"
                android:text="@string/pm"
                android:textAppearance="@style/Body"
                android:textColor="@color/neutral800" />

            <TextView
                android:id="@+id/text_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="16dp"
                android:text="@string/design"
                android:textAppearance="@style/Body"
                android:textColor="@color/neutral800" />

            <TextView
                android:id="@+id/text_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="16dp"
                android:text="@string/web"
                android:textAppearance="@style/Body"
                android:textColor="@color/neutral800" />

            <TextView
                android:id="@+id/text_android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="16dp"
                android:text="@string/android"
                android:textAppearance="@style/Body"
                android:textColor="@color/neutral800" />

            <TextView
                android:id="@+id/text_ios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="16dp"
                android:text="@string/ios"
                android:textAppearance="@style/Body"
                android:textColor="@color/neutral800" />

            <TextView
                android:id="@+id/text_nodejs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="16dp"
                android:text="@string/nodejs"
                android:textAppearance="@style/Body"
                android:textColor="@color/neutral800" />

            <TextView
                android:id="@+id/text_spring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="16dp"
                android:text="@string/springBoot"
                android:textAppearance="@style/Body"
                android:textColor="@color/neutral800" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>