<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.umc.presentation.ui.signUp.fail.SignUpFailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/neutral000"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:onClick="@{()->vm.onClickBack()}"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="156dp"
            android:src="@drawable/ic_error_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up_fail_title"
            android:textAppearance="@style/Title1Bold"
            android:textColor="@color/neutral800" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/sign_up_fail_content"
            android:textAppearance="@style/Subheadline"
            android:textColor="@color/neutral600" />

        <com.umc.presentation.component.UButton
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="80dp"
            android:onClick="@{()->vm.onClickHomePage()}"
            app:backgroundColor="@color/neutral000"
            app:cornerRadius="8dp"
            app:borderWidth="1dp"
            app:borderColor="@color/neutral300"
            app:text="@string/sign_up_fail_homepage"
            app:textAppearance="@style/HeadlineBold"
            app:textColor="@color/neutral800" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/sign_up_fail_qa_email"
            android:textAppearance="@style/Footnote"
            android:textColor="@color/neutral600" />

    </LinearLayout>

</layout>