<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.umc.presentation.ui.notice.search.NoticeSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/neutral000"
        android:paddingHorizontal="16dp">

        <com.umc.presentation.component.UTextField
            android:id="@+id/text_field_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:imeAction="@{android.view.inputmethod.EditorInfo.IME_ACTION_SEARCH}"
            app:layout_constraintEnd_toStartOf="@id/text_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:onImeAction="@{(actionId, text) -> vm.onImeAction(actionId, text)}"
            app:placeholderText="@string/notice_search_placeholder"
            app:strokeColor="@color/neutral300"
            app:strokeWidth="1dp"
            app:textAppearance="@style/Subheadline" />

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> vm.onClickBack()}"
            android:paddingHorizontal="8dp"
            android:paddingVertical="13dp"
            android:text="@string/cancel"
            android:textAppearance="@style/CalloutBold"
            android:textColor="@color/neutral800"
            app:layout_constraintBottom_toBottomOf="@id/text_field_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_field_search" />

        <TextView
            android:id="@+id/text_recent_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/community_search_recent"
            android:textAppearance="@style/Title3Bold"
            android:textColor="@color/neutral800"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_search" />

        <TextView
            android:id="@+id/text_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:onClick="@{() -> vm.deleteAllRecentSearch()}"
            android:text="@string/community_search_deleteall"
            android:textAppearance="@style/Callout"
            android:textColor="@color/neutral600"
            app:layout_constraintBottom_toBottomOf="@id/text_recent_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_recent_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_recent_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_recent_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>