<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_neutral000_radius16"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/imv_icon_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_close_big"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_plan_add_dialog_add_attendance_title"
            android:gravity="center"
            android:textAppearance="@style/Title3Bold"
            android:textColor="@color/neutral800"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@id/imv_icon_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_plan_add_dialog_add_attendance_content"
            android:gravity="center"
            android:textAppearance="@style/Subheadline"
            android:textColor="@color/neutral600"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



            <com.umc.presentation.component.UButton
                android:id="@+id/btn_positive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:contentPaddingBottom="13dp"
                app:contentPaddingTop="13dp"
                app:contentPaddingRight="8dp"
                app:contentPaddingLeft="8dp"
                app:text="@string/home_plan_add_dialog_add_attendance_yes"
                app:textColor="@color/neutral800"
                app:cardBackgroundColor="@color/primary500"
                app:pressedColor="@color/neutral200"
                app:borderColor="@color/neutral300"
                app:borderWidth="1dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_content"
                />

            <com.umc.presentation.component.UButton
                android:id="@+id/btn_negative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:text="@string/home_plan_add_dialog_add_attendance_no"
                app:contentPaddingBottom="13dp"
                app:contentPaddingTop="13dp"
                app:contentPaddingRight="8dp"
                app:contentPaddingLeft="8dp"
                app:textColor="@color/neutral800"
                app:cardBackgroundColor="@color/neutral000"
                app:pressedColor="@color/neutral200"
                app:borderColor="@color/neutral300"
                app:borderWidth="1dp"
                app:layout_constraintTop_toBottomOf="@id/btn_positive"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>